--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,7 @@
 \documentclass[english,11pt]{article}
 \usepackage[english]{babel}
 \usepackage{latexsym,amssymb,amsmath,amsfonts,epsfig,amsthm,color,dsfont,mathtools}
- \usepackage{braket,graphicx,authblk,colonequals,algorithm,algpseudocode,ifthen,framed}
+ \usepackage{braket,graphicx,authblk,colonequals,algorithm,algpseudocode,ifthen,framed, comment}
 \usepackage{float,array}
 \usepackage{xcolor} %
 %\usepackage[left=1in,right=1in]{geometry}
